--- a/Prawesome/res/layout/no_conection_fragment.xml
+++ b/Prawesome/res/layout/no_conection_fragment.xml
@@ -37,4 +37,14 @@
         android:onClick="open_internet_roaming_settings"
         android:text="@string/open_internet_mobile_networks_settings" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp"
+        android:onClick="restart"
+        android:text="@string/restart" />
+
 </RelativeLayout>
