--- a/Prawesome/res/layout/activity_create.xml
+++ b/Prawesome/res/layout/activity_create.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_alignLeft="@+id/non_to_show_message"
-        android:layout_alignRight="@+id/button2"
+        android:layout_alignRight="@+id/sign_out_button"
         android:layout_below="@+id/non_to_show_message"
         android:background="@drawable/rounded_corner"
         android:ems="10"
@@ -64,7 +64,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/sign_out_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/non_to_show_message"
