--- a/Prawesome/res/layout/activity_detail.xml
+++ b/Prawesome/res/layout/activity_detail.xml
@@ -125,7 +125,7 @@
         android:text="@string/not_now" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/sign_out_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
