--- a/Prawesome/res/layout/activity_splash.xml
+++ b/Prawesome/res/layout/activity_splash.xml
@@ -19,6 +19,15 @@
         android:layout_marginTop="191dp"
         android:src="@drawable/logo" />
 
+    <TextView
+        android:id="@+id/welcomeField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
 
 <!--    android:background="@color/backgroundGrey"  -->
