--- a/Prawesome/res/layout/no_conection_fragment.xml
+++ b/Prawesome/res/layout/no_conection_fragment.xml
@@ -28,7 +28,7 @@
         android:text="@string/open_internet_wifi_settings" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/sign_out_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
@@ -41,7 +41,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/sign_out_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
         android:onClick="restart"
