--- a/Prawesome/res/menu/main.xml
+++ b/Prawesome/res/menu/main.xml
@@ -23,4 +23,9 @@
         android:orderInCategory="110"
         android:title="@string/local_db_string"
         android:showAsAction="never"/>
+        <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="110"
+        android:title="@string/logout"
+        android:showAsAction="never"/>
 </menu>
